(Fix-ish) - Tried to fix grid mediaquerie bug in the footer on tablet size. Did.. not.. succeed.. yet.

--- a/assets/scss/block/_qna.scss
+++ b/assets/scss/block/_qna.scss
@@ -34,7 +34,7 @@ $__qnaItemHeight: 50px;
 			background-color: $color_white;
 			@include e(itemBody) {
 				//overflow: auto;
-				max-height: 800px;
+				max-height: 900px;
 			}
 			@include e(toggle) {
 				@include rotate(90deg);
